--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             also capable for doing back-end development using Laravel and Node.js and
             beginner-level mobile app development as well. As a software developer, I believe that
             there is no challenge too hard to be solved. Every challenge that I faced only
-            motivated me to learn more and become better and better.
+            motivated me to learn more and become better and better..
           </p>
           <div class="social-links">
             <a href="https://wa.me/081289188320" target="_blank" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
