--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <meta property="og:title" content="Ignaz Maula's Profile Website" />
   <meta property="og:type" content=”website” />
-  <meta property="og:image" content="/assets/img/thumbnail.png" />
+  <meta property="og:image" content="./assets/img/thumbnail.png" />
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -21,20 +21,20 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="./assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="./assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="./assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css">
-  <link href="/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   
 
   <!-- Template Main CSS File -->
-  <link href="/assets/css/style.css" rel="stylesheet">
-  <link href="/assets/css/animation.css" rel="stylesheet">
-  <link href="/assets/css/particle.css" rel="stylesheet">
+  <link href="./assets/css/style.css" rel="stylesheet">
+  <link href="./assets/css/animation.css" rel="stylesheet">
+  <link href="./assets/css/particle.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Lonely - v4.3.0
@@ -50,7 +50,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <a href="#" class="scrollto img-fluid"><img src="/assets/img/ignaz-logo-grey.png" alt="" width="140"></a>
+        <a href="#" class="scrollto img-fluid"><img src="./assets/img/ignaz-logo-grey.png" alt="" width="140"></a>
       </div>
 
       <nav id="navbar" class="navbar">
@@ -136,7 +136,7 @@
       <div class="container">
         <div class="profile-card">
           <br>
-          <img src="/assets/img/profile.png" alt="" width="150">
+          <img src="./assets/img/profile.png" alt="" width="150">
           <br><br><h1 class="pb-2">Hi, I'm Ignaz Maula</h1>
           <span class="role">College Student • Full-stack Programmer</span><br><br><br>
           <p>
@@ -147,7 +147,7 @@
             also capable for doing back-end development using Laravel and Node.js and
             beginner-level mobile app development as well. As a software developer, I believe that
             there is no challenge too hard to be solved. Every challenge that I faced only
-            motivated me to learn more and become better and better..
+            motivated me to learn more and become better and better.
           </p>
           <div class="social-links">
             <a href="https://wa.me/081289188320" target="_blank" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
@@ -276,7 +276,7 @@
               <a href="https://wa.me/081289188320" target="_blank"><p><i class="bi bi-whatsapp"></i> WhatsApp</p></a>
               <a href="https://www.facebook.com/ignazmaulaibrahim/" target="_blank"><p><i class="bi bi-facebook"></i> Facebook</p></a>
               <a href="https://www.instagram.com/ignazmaula/" target="_blank"><p><i class="bi bi-instagram"></i> Instagram</p></a>
-              <p><em>For more information about me, you can download my CV <a href="/assets/cv/Ignaz Maula CV.pdf">here</a></em></p>
+              <p><em>For more information about me, you can download my CV <a href="./assets/cv/Ignaz Maula CV.pdf">here</a></em></p>
             </div>
 
             <h3 class="resume-title">Education</h3>
@@ -441,7 +441,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="/assets/img/portfolio/kitabantu.png" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/kitabantu.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>KitaBantu</h4>
                 <p>MERN Web App for On-demand household service</p>
@@ -455,7 +455,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="/assets/img/portfolio/ctis.png" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/ctis.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Counter-Covid CTIS</h4>
                 <p>Laravel Web App for register and track covid-19 vaccination</p>
@@ -469,7 +469,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="/assets/img/portfolio/eventware.png" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/eventware.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Aspire Eventware</h4>
                 <p>.NET Core WebApp for managing large scale event</p>
@@ -483,7 +483,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="/assets/img/portfolio/radiolime.png" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/radiolime.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>RadioLime</h4>
                 <p>Javascript-based cloud radio streaming application</p>
@@ -497,7 +497,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="/assets/img/portfolio/andana.png" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/andana.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Andana Creative</h4>
                 <p>Landing page for Andana Branding Agency</p>
@@ -511,7 +511,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="/assets/img/portfolio/tilamdaun.png" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/tilamdaun.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Tilam Daun</h4>
                 <p>Wordpress-based webpage for Tilam Daun restaurant</p>
@@ -525,7 +525,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="/assets/img/portfolio/javascriptentertainment.png" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/javascriptentertainment.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Javascript Entertainment Platform</h4>
                 <p>Browser minigames collection build with javascript</p>
@@ -539,7 +539,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="/assets/img/portfolio/skillseeker.png" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/skillseeker.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>SkillSeeker App Promotion Page</h4>
                 <p>Landing Page for SkillSeeker app</p>
@@ -553,7 +553,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="/assets/img/portfolio/travelgui.png" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/travelgui.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Travel Management App</h4>
                 <p>Java GUI-based app for manage travel passanger and flight</p>
@@ -567,39 +567,39 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-design">
             <div class="portfolio-wrap">
-              <img src="/assets/img/portfolio/metratec.png" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/metratec.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Metratec Design Poster</h4>
                 <p>Social media promotion poster for Metratec</p>
               </div>
               <div class="portfolio-links">
-                <a href="/assets/img/portfolio/metratec.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
+                <a href="./assets/img/portfolio/metratec.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-design">
             <div class="portfolio-wrap">
-              <img src="/assets/img/portfolio/eventproduct.png" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/eventproduct.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Eventware Design Poster</h4>
                 <p>Social media promotion poster for Eventware</p>
               </div>
               <div class="portfolio-links">
-                <a href="/assets/img/portfolio/eventproduct.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
+                <a href="./assets/img/portfolio/eventproduct.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-design">
             <div class="portfolio-wrap">
-              <img src="/assets/img/portfolio/skill.png" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/skill.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>SkillSeeker Design Poster</h4>
                 <p>Social media promotion poster for SkillSeeker</p>
               </div>
               <div class="portfolio-links">
-                <a href="/assets/img/portfolio/skill.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
+                <a href="./assets/img/portfolio/skill.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
               </div>
             </div>
           </div>
@@ -620,7 +620,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="footer-info">
             <br>
-            <a href="#" class="scrollto img-fluid"><img src="/assets/img/ignaz-logo-grey.png" alt="" width="200"></a>
+            <a href="#" class="scrollto img-fluid"><img src="./assets/img/ignaz-logo-grey.png" alt="" width="200"></a>
             <br><br><br>
             <p>
               <strong>Phone:</strong> +62 8128 9188 320<br>
@@ -675,20 +675,20 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="/assets/vendor/php-email-form/validate.js"></script>
-  <script src="/assets/vendor/purecounter/purecounter.js"></script>
-  <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="./assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="./assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="./assets/vendor/php-email-form/validate.js"></script>
+  <script src="./assets/vendor/purecounter/purecounter.js"></script>
+  <script src="./assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="./assets/vendor/waypoints/noframework.waypoints.js"></script>
 
   <!-- Particle JS -->
   <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="/assets/js/particle-config.js"></script>
+  <script src="./assets/js/particle-config.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="/assets/js/main.js"></script>
+  <script src="./assets/js/main.js"></script>
 
 </body>
 
