--- a/index.html
+++ b/index.html
@@ -517,16 +517,14 @@
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                             <div class="portfolio-wrap">
-                                <img src="./assets/img/portfolio/eventware.png" class="img-fluid" alt="" />
+                                <img src="./assets/img/portfolio/balistuti.png" class="img-fluid" alt="" />
                                 <div class="portfolio-info">
-                                    <h4>Aspire Eventware</h4>
-                                    <p>.NET Core WebApp for managing large scale event</p>
+                                    <h4>BaliStuti Balinese Handicraft</h4>
+                                    <p>Website for BaliStuti Balinese Handicraft Store</p>
                                 </div>
                                 <div class="portfolio-links">
                                     <!-- <a href="https://github.com/IgnazMaula/kitabantu-web-app" target="_blank"><i class="devicon-github-original"></i></a> -->
-                                    <a href="https://aspireeventwareidsrv.azurewebsites.net/Account/Login" target="_blank"
-                                        ><i class="bx bx-link"></i
-                                    ></a>
+                                    <a href="https://ignazmaula.github.io/BaliStuti/" target="_blank"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
