--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <h1 class="title1">Hai</h1>
                         </div>
                         <div class="intro">
-                            <h2>I'm Ignaz, Welcome to My Profile</h2>
+                            <h2>I'm <span>Ignaz</span>, Welcome to My Website</h2>
                         </div>
                     </div>
                 </div>
@@ -132,22 +132,19 @@
                 <div class="container">
                     <div class="profile-card">
                         <br />
-                        <img src="./assets/img/profile.jpg" alt="" width="150" />
+                        <img src="./assets/img/profile3.png" alt="" width="150" />
                         <br /><br />
-                        <h1 class="pb-2">Hi, I'm Ignaz Maula</h1>
-                        <span class="role">College Student • Full-stack Programmer</span><br /><br /><br />
+                        <h1 class="pb-2">Hi, I'm Ignaz</h1>
+                        <span class="role">IT Undergraduate • Full-stack Developer</span><br /><br /><br />
                         <p>
-                            My Ignaz Maula Ibrahim. I'm a student majoring in information and technology. I love things related to computer especially
-                            in coding and software development. My biggest strength in software development is front-end programming especially with
-                            Javascript frameworks such as React and Vue. I'm also capable for doing back-end development using Laravel and Node.js and
-                            beginner-level mobile app development as well. As a software developer, I believe that there is no challenge too hard to
-                            be solved. Every challenge that I faced only motivated me to learn more and become better and better.
+                            My name Ignaz Maula Ibrahim. Undergraduate in Information and Technology with experience of working on multiple
+                            enterprise-level projects on multiple platforms. I love things related to computer especially in problem solving. As a
+                            software developer, I believe that there is no challenge too hard to be solved. Every challenge that I faced only
+                            motivated me to learn more and become better.
                         </p>
                         <div class="social-links">
                             <a href="https://wa.me/081289188320" target="_blank" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
-                            <a href="https://www.linkedin.com/in/ignaz-maula-ibrahim-6909441a1" target="_blank" class="linkedin"
-                                ><i class="bi bi-linkedin"></i
-                            ></a>
+                            <a href="https://www.linkedin.com/in/ignazmaula" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
                             <a href="https://github.com/IgnazMaula" target="_blank" class="github"><i class="bi bi-github"></i></a>
                         </div>
                     </div>
@@ -177,7 +174,7 @@
                                     <i class="bx bx-code-alt"></i>
                                 </div>
                                 <h4><a href="">Front-end Development</a></h4>
-                                <p>Developing the client-side of a website for providing interactivity for the end-user</p>
+                                <p>Develop the client-side of a website or mobile app to provides interactivity for the end-user</p>
                             </div>
                         </div>
 
@@ -195,7 +192,7 @@
                                     <i class="bx bx-code-curly"></i>
                                 </div>
                                 <h4><a href="">Back-end Development</a></h4>
-                                <p>Developing the server-side of a website for manage business logic and data transaction</p>
+                                <p>Develop the server-side of a website or mobile app to manages data transaction and business logic</p>
                             </div>
                         </div>
 
@@ -296,7 +293,7 @@
                                 <a href="mailto:ignazmaula@gmail.com" target="_blank"
                                     ><p><i class="bi bi-envelope"></i> Email</p></a
                                 >
-                                <a href="https://www.linkedin.com/in/ignaz-maula-ibrahim-6909441a1" target="_blank"
+                                <a href="https://www.linkedin.com/in/ignazmaula" target="_blank"
                                     ><p><i class="bi bi-linkedin"></i> LinkedIn</p></a
                                 >
                                 <a href="https://github.com/IgnazMaula" target="_blank"
@@ -311,28 +308,50 @@
                                 <a href="https://www.instagram.com/ignazmaula/" target="_blank"
                                     ><p><i class="bi bi-instagram"></i> Instagram</p></a
                                 >
+                                <br />
                                 <p>
                                     <em>For more information about me, you can download my CV <a href="./assets/cv/Ignaz Maula CV.pdf">here</a></em>
                                 </p>
+                                <br />
                             </div>
 
                             <h3 class="resume-title">Education</h3>
                             <div class="resume-item">
-                                <h4>ITB STIKOM Bali</h4>
-                                <p><em>Bachelor of Information & Technology</em></p>
-                                <h5>2018 - Current</h5>
-                                <p>Jl. Raya Puputan No.86, Dangin Puri Klod, Kec. Denpasar Tim., Kota Denpasar, Bali, Indonesia</p>
-                            </div>
-                            <div class="resume-item">
                                 <h4>HELP University Kuala Lumpur</h4>
-                                <p><em>Bachelor of Information & Technology (Hons)</em></p>
-                                <h5>2018 - Current</h5>
+                                <p><em>Bachelor of Information & Technology (B.I.T Hons)</em></p>
+                                <h5>2018 - 2023</h5>
                                 <p>
                                     No. 15, Jalan Sri Semantan 1, Off, Jalan Semantan, Bukit Damansara, Kuala Lumpur, Malaysia, Kuala Lumpur, Malaysia
                                 </p>
                             </div>
+                            <div class="resume-item">
+                                <h4>ITB STIKOM Bali</h4>
+                                <p><em>Bachelor of Computer System (S.Kom) </em></p>
+                                <h5>2018 - 2022</h5>
+                                <p>Jl. Raya Puputan No.86, Dangin Puri Klod, Kec. Denpasar Tim., Kota Denpasar, Bali, Indonesia</p>
+                            </div>
                         </div>
                         <div class="col-lg-6">
+                            <h3 class="resume-title">Working Experience</h3>
+                            <div class="resume-item">
+                                <h4><a href="http://www.rfidiom.co.uk/">RFIDiom Ltd.</a></h4>
+                                <p><b>Software Engineer</b></p>
+                                <p><em>2022 - 2023</em></p>
+                                <p>
+                                    Developed various enterprise-level software that provides solutions through the utilization of IoT (Internet of
+                                    Things). Worked on multiple projects ranging from warehouse and inventory management system to field service
+                                    management system using ASP .NET, Entity Framework, and Blazor WebAssembly.
+                                </p>
+                            </div>
+                            <div class="resume-item">
+                                <h4>Andana Creative</h4>
+                                <h5>2020 - 2021</h5>
+                                <p><em>Web Programmer</em></p>
+                                <p>
+                                    Developed multiple website projects targeted for small and medium enterprises with the purpose of increasing their
+                                    exposure and brand awareness.
+                                </p>
+                            </div>
                             <h3 class="resume-title">Internship Experience</h3>
                             <div class="resume-item">
                                 <h4>Hardrock FM Bali</h4>
@@ -352,22 +371,6 @@
                                         RFID and IoT
                                     </p>
                                 </ul>
-                            </div>
-                            <h3 class="resume-title">Working Experience</h3>
-                            <div class="resume-item">
-                                <h4>Andana Creative</h4>
-                                <h5>2020 - 2021</h5>
-                                <p><em>Web Programmer</em></p>
-                                <p>Working on multiple web projects targeted for small and medium enterprise to increase their branding awareness</p>
-                            </div>
-                            <div class="resume-item">
-                                <h4>Earth Digital Ltd. & RFIDiom Ltd.</h4>
-                                <h5>2022 - Current</h5>
-                                <p><em>Junior Software Engineer</em></p>
-                                <p>
-                                    Develop information technology applications in various platforms using multiple technologies solution such as RFID
-                                    and IoT
-                                </p>
                             </div>
                         </div>
                     </div>
@@ -403,8 +406,8 @@
                         </div>
                         <div class="col-lg-3 col-md-4 col-6 mt-4">
                             <div class="icon-box">
-                                <i class="devicon-vuejs-plain colored"></i>
-                                <h3><a href="">Vue Js</a></h3>
+                                <i class="devicon-typescript-plain colored"></i>
+                                <h3><a href="">Typescript</a></h3>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6 mt-4">
@@ -687,7 +690,7 @@
                                     <strong>Email:</strong> ignazmaula@gmail.com<br />
                                 </p>
                                 <div class="social-links mt-3">
-                                    <a href="https://www.linkedin.com/in/ignaz-maula-ibrahim-6909441a1" target="_blank" class="linkedin"
+                                    <a href="https://www.linkedin.com/in/ignazmaula" target="_blank" class="linkedin"
                                         ><i class="bx bxl-linkedin"></i
                                     ></a>
                                     <a href="https://github.com/IgnazMaula" target="_blank" class="github"><i class="bx bxl-github"></i></a>
@@ -719,7 +722,7 @@
                             <ul>
                                 <li>
                                     <i class="bx bx-chevron-right"></i>
-                                    <a href="https://www.linkedin.com/in/ignaz-maula-ibrahim-6909441a1" target="_blank">LinkedIn</a>
+                                    <a href="https://www.linkedin.com/in/ignazmaula" target="_blank">LinkedIn</a>
                                 </li>
                                 <li><i class="bx bx-chevron-right"></i> <a href="https://github.com/IgnazMaula" target="_blank">GitHub</a></li>
                                 <li><i class="bx bx-chevron-right"></i> <a href="mailto:ignazmaula@gmail.com">Email</a></li>
