--- a/index.html
+++ b/index.html
@@ -277,18 +277,15 @@
                 <div class="container" data-aos="fade-up">
                     <div class="section-title">
                         <h2>Resume</h2>
-                        <p>
-                            This is the summary of my contact, CV, educational background, internship experience and working experience that I have so
-                            far.
-                        </p>
+                        <p>This is the summary of my contact, CV, academic background, internship experience and working experience</p>
                     </div>
 
                     <div class="row">
                         <div class="col-lg-6">
-                            <h3 class="resume-title">Summary</h3>
+                            <h3 class="resume-title">My Contact and CV</h3>
                             <div class="resume-item pb-0">
-                                <h4>Ignaz Maula</h4>
-                                <p><em>Bachelor of Information & Technology (Hons)</em></p>
+                                <h4><a href="http://ignazmaula.github.io">Ignaz Maula Ibrahim</a></h4>
+                                <p><strong>Full-stack Software Developer</strong></p>
                                 <p>Contact me on:</p>
                                 <a href="mailto:ignazmaula@gmail.com" target="_blank"
                                     ><p><i class="bi bi-envelope"></i> Email</p></a
@@ -310,31 +307,32 @@
                                 >
                                 <br />
                                 <p>
-                                    <em>For more information about me, you can download my CV <a href="./assets/cv/Ignaz Maula CV.pdf">here</a></em>
+                                    For more information, Please download my CV
+                                    <a href="./assets/cv/CV_Ignaz Maula Ibrahim.pdf"><strong>here</strong></a>
                                 </p>
                                 <br />
                             </div>
 
-                            <h3 class="resume-title">Education</h3>
+                            <h3 class="resume-title">Academic Background</h3>
                             <div class="resume-item">
-                                <h4>HELP University Kuala Lumpur</h4>
-                                <p><em>Bachelor of Information & Technology (B.I.T Hons)</em></p>
-                                <h5>2018 - 2023</h5>
+                                <h4><a href="http://www.help.edu.my" target="_blank">HELP University Kuala Lumpur</a></h4>
+                                <p><b>Bachelor of Information & Technology (B.I.T Hons)</b></p>
+                                <p><em>2018 - 2023</em></p>
                                 <p>
                                     No. 15, Jalan Sri Semantan 1, Off, Jalan Semantan, Bukit Damansara, Kuala Lumpur, Malaysia, Kuala Lumpur, Malaysia
                                 </p>
                             </div>
                             <div class="resume-item">
-                                <h4>ITB STIKOM Bali</h4>
-                                <p><em>Bachelor of Computer System (S.Kom) </em></p>
-                                <h5>2018 - 2022</h5>
+                                <h4><a href="http://www.stikom-bali.ac.id" target="_blank">ITB STIKOM Bali</a></h4>
+                                <p><b>Bachelor of Computer System (S.Kom)</b></p>
+                                <p><em>2018 - 2022</em></p>
                                 <p>Jl. Raya Puputan No.86, Dangin Puri Klod, Kec. Denpasar Tim., Kota Denpasar, Bali, Indonesia</p>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <h3 class="resume-title">Working Experience</h3>
                             <div class="resume-item">
-                                <h4><a href="http://www.rfidiom.co.uk/">RFIDiom Ltd.</a></h4>
+                                <h4><a href="http://www.rfidiom.co.uk" target="_blank">RFIDiom Ltd.</a></h4>
                                 <p><b>Software Engineer</b></p>
                                 <p><em>2022 - 2023</em></p>
                                 <p>
@@ -344,9 +342,9 @@
                                 </p>
                             </div>
                             <div class="resume-item">
-                                <h4>Andana Creative</h4>
-                                <h5>2020 - 2021</h5>
-                                <p><em>Web Programmer</em></p>
+                                <h4><a href="http://www.andanacreative.com" target="_blank">Andana Creative</a></h4>
+                                <p><b>Web Programmer</b></p>
+                                <p><em>2020 - 2021</em></p>
                                 <p>
                                     Developed multiple website projects targeted for small and medium enterprises with the purpose of increasing their
                                     exposure and brand awareness.
@@ -354,23 +352,20 @@
                             </div>
                             <h3 class="resume-title">Internship Experience</h3>
                             <div class="resume-item">
-                                <h4>Hardrock FM Bali</h4>
-                                <p><em>Social Media Content & Graphic Designer Intern</em></p>
-                                <h5>2017 - 2017</h5>
-                                <ul>
-                                    <p>Creating graphic design and content for social media content, infographic and marketing</p>
-                                </ul>
+                                <h4><a href="http://www.hardrockfm.com/hardrock-fm-bali" target="_blank">Hardrock FM Bali</a></h4>
+                                <p><b>Social Media Content & Graphic Designer Intern</b></p>
+                                <p><em>2017 - 2017</em></p>
+                                <p>Created graphic designs and videos for social media content and marketing purposes.</p>
+                                <br />
                             </div>
                             <div class="resume-item">
-                                <h4>Earth Digital Ltd. & RFIDiom Ltd.</h4>
-                                <p><em>Software Engineer Intern</em></p>
-                                <h5>2021 - 2021</h5>
-                                <ul>
-                                    <p>
-                                        Develop information technology applications in various platforms using multiple technologies solution such as
-                                        RFID and IoT
-                                    </p>
-                                </ul>
+                                <h4><a href="http://www.earthdigital.co.uk" target="_blank">Earth Digital Ltd. & RFIDiom Ltd.</a></h4>
+                                <p><b>Software Engineer Intern</b></p>
+                                <p><em>2021 - 2021</em></p>
+                                <p>
+                                    Developed variety of web and mobile applications such as property management software, event management software
+                                    and online radio streaming platform.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -388,14 +383,14 @@
                     <div class="row" data-aos="fade-up" data-aos-delay="300">
                         <div class="col-lg-3 col-md-4 col-6 mt-4">
                             <div class="icon-box">
-                                <i class="devicon-bootstrap-plain colored"></i>
-                                <h3><a href="">Bootstrap CSS</a></h3>
+                                <i class="devicon-tailwindcss-plain colored"></i>
+                                <h3><a href="">Tailwind CSS</a></h3>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6 mt-4">
                             <div class="icon-box">
-                                <i class="devicon-tailwindcss-plain colored"></i>
-                                <h3><a href="">Tailwind CSS</a></h3>
+                                <i class="devicon-materialui-plain colored"></i>
+                                <h3><a href="">Material-UI</a></h3>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6 mt-4">
